force-app/main/default/objects/FEC_KYC_Result__c/FEC_KYC_Result__c.object-meta.xml
<CustomObject>
    <label>KYC Result</label>
    <nameField>
        <label>KYC Question</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>