force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_Case_Interaction__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case_Interaction__c</fullName>
    <label>Case/Interaction</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>KYC Results</relationshipLabel>
    <relationshipName>KYC_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>