force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_Editable__c.field-meta.xml
<CustomField>
    <fullName>FEC_Editable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Trạng thái được cập nhật câu trả lời hay không
Nếu check - User được chọn lại đáp án cho câu hỏi này
Nếu không, User sẽ không thể chỉnh sửa đáp án câu hỏi này nữa</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>