force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_KYC__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC__c</fullName>
    <label>KYC</label>
    <referenceTo>FEC_KYC__c</referenceTo>
    <relationshipLabel>KYC Results</relationshipLabel>
    <relationshipName>KYC_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>