force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_KYC_Answer__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Answer__c</fullName>
    <description>Thông tin gợi ý đã hiển thị</description>
    <label>KYC Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>