force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_KYC_Product__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Product__c</fullName>
    <description>Sản phẩm liên quan</description>
    <label>KYC Product</label>
    <length>80</length>
    <type>Text</type>
</CustomField>