force-app/main/default/objects/FEC_KYC_Result__c/fields/FEC_KYC_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Result__c</fullName>
    <description>Trường lưu giá trị User đã chọn (Fail/Pass) để hiển thị lịch sử trong  màn Interaction Review</description>
    <formula>IF( FEC_Status__c  = True, &apos;Pass&apos;,&apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Result</label>
    <type>Text</type>
</CustomField>